--- a/Portfolio-main/contatos.html
+++ b/Portfolio-main/contatos.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width">
-		<title>Portfolio</title>
+		<title>Alunos</title>
 
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	</head>
-
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="logo.png"></h1>
+				<h1><img src="logo.png" alt="Logo da Barbearia Boa Vista"></h1>
 
 				<nav>
 					<ul>
@@ -25,7 +22,14 @@
 			</div>
 		</header>
 
-		<img class="banner" src="banner.jpg">
+		<main>
+			<ul class="produtos">
+				<li>
+					<h2>Jacques</h2>
+					<img src="FNV17.jpg">
+				</li>
+			</ul>
+		</main>
 
 		<footer>
 			<img src="logo-branco.png">
