--- a/atividades.html
+++ b/atividades.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width">
-		<title>Portfolio</title>
+		<title>Atividades</title>
 
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	</head>
-
 	<body>
 		<header>
 			<div class="caixa">
@@ -24,6 +21,26 @@
 				</nav>
 			</div>
 		</header>
+
+		<main>
+			<ul class="produtos">
+				<li>
+					<h2>Atividade 1</h2>
+					<img src="cabelo.jpg">
+					<p class="produto-descricao">Pendente</p>
+				</li>
+				<li>
+					<h2>Atividade 2</h2>
+					<img src="barba.jpg">
+					<p class="produto-descricao">Pendente</p>
+				</li>
+				<li>
+					<h2>Atividade</h2>
+					<img src="cabelo+barba.jpg">
+					<p class="produto-descricao">Pendente</p>
+				</li>
+			</ul>
+		</main>
 
 		<footer>
 			<img src="logo-branco.png">
