--- a/contatos.html
+++ b/contatos.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width">
-		<title>Portfolio</title>
+		<title>Alunos</title>
 
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	</head>
-
 	<body>
 		<header>
 			<div class="caixa">
@@ -24,6 +21,15 @@
 				</nav>
 			</div>
 		</header>
+
+		<main>
+			<ul class="produtos">
+				<li>
+					<h2>Jacques</h2>
+					<img src="FNV17.jpg">
+				</li>
+			</ul>
+		</main>
 
 		<footer>
 			<img src="logo-branco.png">
