--- a/atividades.html
+++ b/atividades.html
@@ -24,21 +24,25 @@
 
 		<main>
 			<ul class="produtos">
+				<a href="atividade_1.html">
 				<li>
-					<h2>Atividade 1</h2>
-					<img src="cabelo.jpg">
+					<h2>Calculadora 3x3</h2>
+					
 					<p class="produto-descricao">Pendente</p>
 				</li>
+			    </a>
+				<a href="index.html">
 				<li>
 					<h2>Atividade 2</h2>
-					<img src="barba.jpg">
 					<p class="produto-descricao">Pendente</p>
 				</li>
+			    </a>
+				<a href="index.html">
 				<li>
-					<h2>Atividade</h2>
-					<img src="cabelo+barba.jpg">
+					<h2>Atividade 3</h2>
 					<p class="produto-descricao">Pendente</p>
 				</li>
+			    </a>
 			</ul>
 		</main>
 
