--- a/creditos.html
+++ b/creditos.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Creditos - Barbearia Boa Vista</title>
+		<title>Alunos</title>
 
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
@@ -16,7 +16,6 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="produtos.html">Produtos</a></li>
-						<li><a href="contato.html">Contato</a></li>
 						<li><a href="creditos.html">Creditos</a></li>
 					</ul>
 				</nav>
