--- a/atividade_1.html
+++ b/atividade_1.html
@@ -23,52 +23,52 @@
 		</header>
 
 	<body>
-
-			<h1>Calculador de Times 3x3</h1>
-			<label for="students">Coloque o número de alunos (só múltiplos de 3):</label>
-			<input type="number" id="students" value="0" min="0" step="3">
-			<button onclick="calculateTeams()">Calcular</button>
-			<button onclick="resetCalculator()">Resetar</button>
-		
-			<p>Número de Times: <span id="nteams">0</span></p>
-			<p id="errorMessage" class="error"></p>
-		
-			<script>
-				function calculateTeams() {
-					// Pegar o número de alunos do input
-					var students = document.getElementById('students').value;
-					
-					// Ver se o número de estudantes é um número válido múltiplo de 3
-					if (students % 3 !== 0) {
-						// Mostrar uma mensagem de erro se o número for inválido
-						document.getElementById('errorMessage').textContent = "Por favor coloque um número múltiplo de 3.";
-						return;
-					} else {
-						// Apagar a mensagem de erro
-						document.getElementById('errorMessage').textContent = "";
-					}
-		
-					// Calcular o número de times dividindo os estudantes por 3
-					var nteams = students / 3;
-		
-					// Colocar o número de times pro valor mais próximo
-					nteams = Math.round(nteams);
-		
-					// Mostrar o resultado na página
-					document.getElementById('nteams').textContent = nteams;
-				}
-		
-				function resetCalculator() {
-					// Resetar o valor de input pra 0
-					document.getElementById('students').value = 0;
-		
-					// Resetar o número de times pra 0
-					document.getElementById('nteams').textContent = 0;
-		
-					
+		<h1>Calculador de Times 3x3</h1>
+		<label for="students">Coloque o número de alunos:</label>
+		<input type="number" id="students" value="0" min="0" step="1">
+		<button onclick="calculateTeams()">Calcular</button>
+		<button onclick="resetCalculator()">Resetar</button>
+	
+		<p>Número de Times: <span id="nteams">0</span></p>
+		<p id="errorMessage" class="error" style="color: red;"></p>
+	
+		<script>
+			function calculateTeams() {
+				// Pegar o número de alunos do input
+				var students = parseInt(document.getElementById('students').value);
+	
+				// Verificar se o número de alunos é um número válido
+				if (isNaN(students) || students < 0) {
+					document.getElementById('errorMessage').textContent = "Por favor coloque um número válido.";
+					return;
+				} else {
 					document.getElementById('errorMessage').textContent = "";
 				}
-			</script>
-		
-		</body>
-	</html>
+	
+				// Calcular o número de times
+				var nteams = Math.floor(students / 3);
+	
+				// Mostrar aviso se há alunos faltando para completar um time
+				if (students % 3 !== 0) {
+					document.getElementById('errorMessage').textContent = "Há alunos faltando para completar um time de 3.";
+				} else {
+					document.getElementById('errorMessage').textContent = "";
+				}
+	
+				// Mostrar o resultado na página
+				document.getElementById('nteams').textContent = nteams;
+			}
+	
+			function resetCalculator() {
+				// Resetar o valor de input para 0
+				document.getElementById('students').value = 0;
+	
+				// Resetar o número de times para 0
+				document.getElementById('nteams').textContent = 0;
+	
+				// Limpar a mensagem de erro
+				document.getElementById('errorMessage').textContent = "";
+			}
+		</script>
+	</body>
+</html>
