--- a/atividade_1.html
+++ b/atividade_1.html
@@ -53,12 +53,12 @@
 				// Mostrar aviso se há alunos faltando para completar um time
 				if (students % 3 !== 0) {
 					document.getElementById('errorMessage').textContent = "Há " + (students % 3) + " alunos faltando para completar um time de 3.";
+					document.getElementById('correctMessage').textContent = ""
 				} else {
 					document.getElementById('correctMessage').textContent = "Correto."
+					document.getElementById('errorMessage').textContent = ""
 				}
 
-				
-	
 				// Mostrar o resultado na página
 				document.getElementById('nteams').textContent = nteams;
 			}
