--- a/atividade_1.html
+++ b/atividade_1.html
@@ -78,4 +78,10 @@
 			}
 		</script>
 	</body>
+
+	<footer>
+		<img src="logo-branco.png">
+		<p class="copyright">&copy; Portfolio - 2024</p>
+	</footer>
+</body>
 </html>
