--- a/atividades.html
+++ b/atividades.html
@@ -27,13 +27,12 @@
 				<a href="atividade_1.html">
 				<li>
 					<h2>Calculadora 3x3</h2>
-					
 					<p class="produto-descricao">Pendente</p>
 				</li>
 			    </a>
-				<a href="index.html">
+				<a href="atividade_2.html">
 				<li>
-					<h2>Atividade 2</h2>
+					<h2>Calculadora IMC</h2>
 					<p class="produto-descricao">Pendente</p>
 				</li>
 			    </a>
