--- a/atividade_2.html
+++ b/atividade_2.html
@@ -72,14 +72,14 @@
 	<body>
 	
 	<div class="container">
-		<h2>BMI Calculator</h2>
+		<h2>Calculadora IMC</h2>
 		<label for="peso">peso (kg):</label>
 		<input type="number" id="peso" placeholder="Coloque seu peso" required>
 		
 		<label for="tamanho">tamanho (m):</label>
 		<input type="number" step="0.01" id="tamanho" placeholder="Coloque seu tamanho" required>
 		
-		<button onclick="calculateBMI()">Calcular BMI</button>
+		<button onclick="calculateBMI()">Calcular IMC</button>
 		
 		<div class="result" id="result"></div>
 	</div>
