--- a/atividades.html
+++ b/atividades.html
@@ -36,7 +36,7 @@
 					<p class="produto-descricao">Pendente</p>
 				</li>
 			    </a>
-				<a href="index.html">
+				<a href="atividade_3.html">
 				<li>
 					<h2>Atividade 3</h2>
 					<p class="produto-descricao">Pendente</p>
