--- a/atividade_3.html
+++ b/atividade_3.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividades</title>
-  <link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="atividade3.css">
+    <title>Interactive Presentation Card</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="atividade3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
     <header>
       <div class="caixa">
         <h1><img src="logo.png" alt="Logo"></h1>
-
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -23,14 +23,18 @@
       </div>
     </header>
 
-    <div class="presentation-card">
+    <div class="presentation-card" id="presentationCard">
       <h2>Jacques</h2>
       <p>Desenvolvedor de Web</p>
+
       <div class="contact-info" id="contactInfo">
-        <p>Email: joao.jacques@escola.pr.gov.br</p>
-        <p>Telefone: (32) 999-9999</p>
-        <p>Lugar: Anvers, Burgundia</p>
+        <p><span class="email-icon">📧</span> <span class="email-text">Email: joao.jacques@escola.pr.gov.br</span></p>
+        <p><span>📱</span> Telefone: (32) 999-9999</p>
+        <p><span>📍</span> Lugar: Anvers, Burgundia 
+          <img src="images/burgundy-flag.png" alt="Burgundy Flag" class="burgundy-flag">
+        </p>
       </div>
+
       <div class="button-container">
         <button id="toggleButton">Mostrar Mais</button>
       </div>
@@ -39,3 +43,16 @@
     <script src="script.js"></script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
